# cargo-coupling

./: .coupling.toml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PROPOSAL.md  README.md
.claude/: settings.json
.claude/agents/: architecture-critic.md  balance-advisor.md  rust-idiomatic-expert.md
.claude/commands/: README.md  analyze.md  check-balance.md  e2e-test.md  explain-issue.md  full-review.md  refactor.md  similarity.md
.claude/docs/: architecture.md  dogfooding-learnings.md  issue-types.md  jobs-to-be-done.md  khononov-framework.md  learnings.md  web-ui-architecture.md
.claude/rules/: grading-integrity.md  rust.md  web-ui.md
.claude/skills/analyze/: SKILL.md  output-template.md
.claude/skills/balanced-coupling/: SKILL.md  model-reference.md
.claude/skills/cargo-coupling/: SKILL.md
.claude/skills/check-balance/: SKILL.md
.claude/skills/e2e-test/: SKILL.md  test-scenarios.md
.claude/skills/explain-issue/: SKILL.md
.claude/skills/full-review/: SKILL.md  output-template.md
.claude/skills/hotspots/: SKILL.md
.claude/skills/mutants/: SKILL.md
.claude/skills/refactor/: SKILL.md  patterns.md
.claude/skills/release/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/similarity/: SKILL.md
.claude/skills/web/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/: analyzer.rs  balance.rs  classification.rs  cli_output.rs  config.rs  diff.rs  discovery.rs  external.rs  history.rs  lib.rs  main.rs  manifest.rs  metrics.rs  report.rs  volatility.rs  workspace.rs
src/balance/: action.rs  coupling.rs  external_crates.rs  grade.rs  issue.rs  issue_type.rs  issues.rs  labels.rs  mod.rs  patterns.rs  project.rs  rationale.rs  score.rs  severity.rs  signals.rs  subdomain.rs
src/metrics/: coupling.rs  dimensions.rs  mod.rs  module.rs  project.rs
src/web/: graph.rs  mod.rs  routes.rs  server.rs
tests/: baseline_e2e.rs  history_e2e.rs  layout_e2e.rs  subdomain_e2e.rs
web-assets/: index.html
web-assets/css/: style.css
web-assets/js/: app.js  coupling-graph-2d.js  coupling-graph-3d.js  features.js  graph-queue.js  i18n.js  item-graph.js  main.js  panels-and-jobs.js  report-view.js  state.js  timeline.js  ui-controls.js  ui.js  url-router.js
