[package]
name = "cargo-coupling"
version = "0.2.1"
edition = "2024"
description = "A coupling analysis tool for Rust projects - measuring the 'right distance' in your code"
license = "MIT"
repository = "https://github.com/nwiizo/cargo-coupling"
keywords = ["coupling", "analysis", "architecture", "metrics", "cargo-subcommand"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
walkdir = "2.5"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
cargo_metadata = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
glob = "0.3"
toml = "0.8"
regex-lite = "0.1"

[dev-dependencies]
tempfile = "3.14"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "analysis_benchmark"
harness = false
