[package]
name = "cargo-coupling"
version = "0.2.7"
edition = "2024"
description = "A coupling analysis tool for Rust projects - measuring the 'right distance' in your code"
license = "MIT"
repository = "https://github.com/nwiizo/cargo-coupling"
keywords = ["coupling", "analysis", "architecture", "metrics", "cargo-subcommand"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
walkdir = "2.5"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
cargo_metadata = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
glob = "0.3"
toml = "0.8"
regex-lite = "0.1"

# Web UI
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rust-embed = "8"
tower-http = { version = "0.6", features = ["cors"] }
mime_guess = "2"
open = "5"

[dev-dependencies]
tempfile = "3.24"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "analysis_benchmark"
harness = false
